--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "sensio/framework-extra-bundle": "2.2.*",
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
-        "jms/di-extra-bundle": "1.3.*"
+        "jms/di-extra-bundle": "1.3.*",
+
+        "twitter/bootstrap": "2.3.*"
     },
     "scripts": {
         "post-install-cmd": [
