--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
 
         "twitter/bootstrap": "2.3.*"
     },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "2.1.*@dev"
+    },
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
