--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,13 @@
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
 
-        "twitter/bootstrap": "2.3.*"
+        "twitter/bootstrap": "2.3.*",
+        "stof/doctrine-extensions-bundle": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "2.1.*@dev",
+        "friendsofsymfony/rest-bundle": "0.12.*@dev",
+        "jms/serializer-bundle": "0.12.*@dev"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "2.1.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
