--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -88,6 +88,11 @@ swiftmailer:
     password:  %mailer_password%
     spool:     { type: memory }
 
-#bc_bootstrap:
-#    assets_dir:  %kernel.root_dir%/../vendor/twitter/bootstrap
-#    jquery_path: %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.9.1.js
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts:   [admin]
+
+        sonata.block.service.text:
+        sonata.block.service.rss:
