--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,14 @@
         "sonata-project/doctrine-orm-admin-bundle": "2.2.*@dev"
     },
     "require-dev": {
+        "behat/behat":           ">=2.2.2",
+        "behat/mink": "@dev",
+        "behat/mink-browserkit-driver": "dev-master",
+        "behat/mink-extension": "*",
+        "behat/symfony2-extension": "dev-master",
+        "behat/common-contexts": "*",
+        "behat/mink-selenium2-driver": "dev-master",
+        "kriswallsmith/buzz":    ">=0.5"
     },
     "scripts": {
         "post-install-cmd": [
