--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
     - chmod -R 777 app/cache app/logs
     - app/console --env=test cache:warmup
     - chmod -R 777 app/cache app/logs
-    - app/console import:price dylerprice.xml
+    - app/console import:price
 
 script:
 #    - phpunit -c app
